--- a/index.html
+++ b/index.html
@@ -1,72 +1,166 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Easy Data Binder</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+	<h1>Easy Data Binder</h1>
+	<a href="#" id="forkme"></a>
+	<div class="wrap">
+		<h2>Example</h2>
+		<div>
+			<label class="tit">Name：</label><input type="text" data-binder="name" />
+		</div>
+		<div>
+			<label class="tit">Old：</label><input type="text" data-binder="old" />
+		</div>
+		<div>
+			<label class="tit">Sex：</label>
+			<div>
+				<label><input type="radio" name="sex" value="male" data-binder="sex" /> Male</label>
+				<label><input type="radio" name="sex" value="female" data-binder="sex" /> Female</label>
+			</div>
+		</div>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Easydatabinder : Easy Data Binder">
+		<div>
+			<label class="tit">Apply：</label>
+			<label data-class="blue:sex==male"><input type="checkbox" data-binder="football" /> Football</label>
+			<label data-class="blue:sex==male"><input type="checkbox" data-binder="basketball" /> Basketball</label>
+			<label data-class="blue:sex==male"><input type="checkbox" data-binder="swimming" /> Swimming</label>
+			<label data-class="pink:sex==female"><input type="checkbox" data-binder="dance" /> Dance</label>
+			<label data-class="pink:sex==female"><input type="checkbox" data-binder="piano" /> Piano</label>
+			<label data-class="pink:sex==female"><input type="checkbox" data-binder="painting" /> Painting</label>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+			<p data-visible="sex==male">
+				(Boy's recommendation: Football,Basketball,Swimming)
+			</p>
+			<p data-visible="sex==female">
+				(Girls's recommendation: Dance,Piano,Painting)
+			</p>
 
-    <title>Easydatabinder</title>
-  </head>
+		</div>
+		
+		
+		<div>
+			<label class="tit">Introduction：</label>
+			<textarea cols="30" rows="10" data-binder="content"></textarea>
+		</div>
+		<div>
+			<label class="tit"></label>
+			<button id="set">Change To Female</button>
+			<button id="submit">Submit</button>
+		</div>
+		<div>
+			<pre id="info"></pre>
+		</div>
+	</div>
+	
+	<div class="documents">
+		<h2>Document API</h2>
+		<dl>
+			<dt>1. Init</dt>
+			<dd>
+				<pre>
+					var dataBinder = DataBinder();
+				</pre>
+			</dd>
+		</dl>
 
-  <body>
+		<dl>
+			<dt>2. Set Multiple Data </dt>
+			<dd>
+				<pre>
+					var initData = { 
+						name  : "Nicolas", 
+						old : "3", 
+						sex : "male", 
+						content: "Tell me something" 
+					}
+				</pre>
+			</dd>
+			<dd>
+				<pre>
+					dataBinder.set(initData);
+				</pre>
+			</dd>
+		</dl>
+		<dl>
+			<dt>3. Set Single Data</dt>
+			<dd>
+				<pre>
+					dataBinder.set('sex','female');
+				</pre>
+			</dd>
+		</dl>
+		<dl>
+			<dt>4. Bind Data To Input</dt>
+			<dd>
+				<pre>
+					&lt;input type="text" data-binder="name" /&gt;
+				</pre>
+			</dd>
+		</dl>
+		<dl>
+			<dt>5. Toggle Visible</dt>
+			<dd>
+				<pre>
+					&lt;p data-visible="sex==male"&gt;
+						(Boy's recommendation: Football,Basketball,Swimming)
+					&lt;/p&gt;
+				</pre>
+			</dd>
+		</dl>
+		<dl>
+			<dt>6. Toggle ClassName</dt>
+			<dd>
+				<pre>
+					&lt;label data-class="blue:sex==male,pink:sex==female"&gt;&lt;/label&gt;
+				</pre>
+			</dd>
+		</dl>
+		<dl>
+			<dt>7. Get Data</dt>
+			<dd>
+				<pre>
+					dataBinder.get();
+				</pre>
+			</dd>
+		</dl>
+		<dl>
+			<dt>8. Toggle Debug</dt>
+			<dd>
+				<pre>
+					dataBinder.debug = true || false;
+				</pre>
+			</dd>
+		</dl>
+	</div>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/lancer07/EasyDataBinder">View on GitHub</a>
+	<footer>
+		<p>
+			Maintained by <a href="http://www.linqing07.com/" target="_blank">Lancer Lin</a>
+		</p>
+	</footer>
 
-          <h1 id="project_title">Easydatabinder</h1>
-          <h2 id="project_tagline">Easy Data Binder</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/lancer07/EasyDataBinder/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/lancer07/EasyDataBinder/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Easydatabinder maintained by <a href="https://github.com/lancer07">lancer07</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+	<script type="text/javascript" src="databinder.js"></script>
+	<script type="text/javascript">
+		var dataBinder = DataBinder();
+		dataBinder.debug = true; // 开启调试，在控制台实时输出
+		var initData = {
+			name  : "Nicolas",
+			old : "3",
+			sex : "male",
+			content: "Tell me something"
+		}
+		dataBinder.set(initData);
+		document.getElementById('set').onclick = function(){
+			dataBinder.set('sex','female');
+		}
+		document.getElementById('submit').onclick = function(){
+			document.getElementById('info').innerText = JSON.stringify(dataBinder.get())
+		}
+	</script>
+</body>
 </html>
