--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 	<script type="text/javascript" src="databinder.js"></script>
 	<script type="text/javascript">
 		var dataBinder = DataBinder();
-		dataBinder.debug = true; // 开启调试，在控制台实时输出
+		dataBinder.debug = true;
 		var initData = {
 			name  : "Nicolas",
 			old : "3",
