--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>Easy Data Binder</h1>
-	<a href="#" id="forkme"></a>
+	<a href="https://github.com/lancer07/EasyDataBinder" target="_blank" id="forkme"></a>
 	<div class="wrap">
 		<h2>Example</h2>
 		<div>
