--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 			Maintained by <a href="http://www.linqing07.com/" target="_blank">Lancer Lin</a>
 		</p>
 	</footer>
-
+	<script type="text/javascript" src="lodash.js"></script>
 	<script type="text/javascript" src="databinder.js"></script>
 	<script type="text/javascript">
 		var dataBinder = DataBinder();
@@ -152,6 +152,7 @@
 			name  : "Nicolas",
 			old : "3",
 			sex : "male",
+			
 			content: "Tell me something"
 		}
 		dataBinder.set(initData);
