--- a/index.html
+++ b/index.html
@@ -11,40 +11,55 @@
 	<div class="wrap">
 		<h2>Example</h2>
 		<div>
-			<label class="tit">Name：</label><input type="text" data-binder="name" />
+			<label class="tit">Name: </label><input type="text" data-binder="name" />
 		</div>
 		<div>
-			<label class="tit">Old：</label><input type="text" data-binder="old" />
+			<label class="tit">Old: </label><input type="text" data-binder="old" />
 		</div>
 		<div>
-			<label class="tit">Sex：</label>
+			<label class="tit">Height: </label><input type="text" data-binder="body.height" /> CM
+		</div>
+		<div>
+			<label class="tit">Weight: </label><input type="text" data-binder="body.weight" /> KG
+		</div>
+		<div>
+			<label class="tit">Leg: </label><input type="text" data-binder="body.leg.width" /> CM
+		</div>
+		<div>
+			<label class="tit">Sex: </label>
 			<div>
 				<label><input type="radio" name="sex" value="male" data-binder="sex" /> Male</label>
 				<label><input type="radio" name="sex" value="female" data-binder="sex" /> Female</label>
 			</div>
 		</div>
-
+		
 		<div>
-			<label class="tit">Apply：</label>
+			<label class="tit">Apply: </label>
 			<label data-class="blue:sex==male"><input type="checkbox" data-binder="football" /> Football</label>
 			<label data-class="blue:sex==male"><input type="checkbox" data-binder="basketball" /> Basketball</label>
 			<label data-class="blue:sex==male"><input type="checkbox" data-binder="swimming" /> Swimming</label>
 			<label data-class="pink:sex==female"><input type="checkbox" data-binder="dance" /> Dance</label>
 			<label data-class="pink:sex==female"><input type="checkbox" data-binder="piano" /> Piano</label>
 			<label data-class="pink:sex==female"><input type="checkbox" data-binder="painting" /> Painting</label>
-
 			<p data-visible="sex==male">
 				(Boy's recommendation: Football,Basketball,Swimming)
 			</p>
 			<p data-visible="sex==female">
 				(Girls's recommendation: Dance,Piano,Painting)
 			</p>
-
 		</div>
 		
-		
 		<div>
-			<label class="tit">Introduction：</label>
+			<label class="tit">Family: </label>
+			<div>
+				<input type="text" class="short" id="relationship" placeholder="Relationship" />
+				<input type="text" class="short" id="personName" placeholder="Name"  />
+				<button id="addPerson">Add</button>
+				<ul data-repeat="family.parent"></ul>
+			</div>
+		</div>
+		<div>
+			<label class="tit">Introduction: </label>
 			<textarea cols="30" rows="10" data-binder="content"></textarea>
 		</div>
 		<div>
@@ -72,11 +87,15 @@
 			<dt>2. Set Multiple Data </dt>
 			<dd>
 				<pre>
-					var initData = { 
-						name  : "Nicolas", 
-						old : "3", 
-						sex : "male", 
-						content: "Tell me something" 
+					var initData = {
+					&nbsp;&nbsp;name  : "Nicolas",
+					&nbsp;&nbsp;old : "3",
+					&nbsp;&nbsp;body:{
+					&nbsp;&nbsp;&nbsp;&nbsp;height : "50",
+					&nbsp;&nbsp;&nbsp;&nbsp;weight : "17"
+					&nbsp;&nbsp;},
+					&nbsp;&nbsp;sex : "male",
+					&nbsp;&nbsp;content: "Tell me something"
 					}
 				</pre>
 			</dd>
@@ -101,13 +120,18 @@
 					&lt;input type="text" data-binder="name" /&gt;
 				</pre>
 			</dd>
+			<dd>
+				<pre>
+					&lt;input type="text" data-binder="body.height" /&gt;
+				</pre>
+			</dd>
 		</dl>
 		<dl>
 			<dt>5. Toggle Visible</dt>
 			<dd>
 				<pre>
 					&lt;p data-visible="sex==male"&gt;
-						(Boy's recommendation: Football,Basketball,Swimming)
+					&nbsp;&nbsp;&nbsp;&nbsp;(Boy's recommendation: Football,Basketball,Swimming)
 					&lt;/p&gt;
 				</pre>
 			</dd>
@@ -121,7 +145,34 @@
 			</dd>
 		</dl>
 		<dl>
-			<dt>7. Get Data</dt>
+			<dt>7. Add Data to Array</dt>
+			<dd>
+				<pre>
+					dataBinder.pushArray('family.parent',{
+					&nbsp;&nbsp;&nbsp;&nbsp;relationship : 'father',
+					&nbsp;&nbsp;&nbsp;&nbsp;name : 'Lancer'
+					});
+				</pre>
+			</dd>
+		</dl>
+		<dl>
+			<dt>8. Remove Data from Array</dt>
+			<dd>
+				<pre>
+					dataBinder.removeItem('family.parent',1);
+				</pre>
+			</dd>
+		</dl>
+		<dl>
+			<dt>9. Render List</dt>
+			<dd>
+				<pre>
+					&lt;ul data-repeat="family.parent"&gt;&lt;/ul&gt;
+				</pre>
+			</dd>
+		</dl>
+		<dl>
+			<dt>10. Get Data</dt>
 			<dd>
 				<pre>
 					dataBinder.get();
@@ -129,7 +180,7 @@
 			</dd>
 		</dl>
 		<dl>
-			<dt>8. Toggle Debug</dt>
+			<dt>11. Toggle Debug</dt>
 			<dd>
 				<pre>
 					dataBinder.debug = true || false;
@@ -143,6 +194,7 @@
 			Maintained by <a href="http://www.linqing07.com/" target="_blank">Lancer Lin</a>
 		</p>
 	</footer>
+
 	<script type="text/javascript" src="lodash.js"></script>
 	<script type="text/javascript" src="databinder.js"></script>
 	<script type="text/javascript">
@@ -151,8 +203,23 @@
 		var initData = {
 			name  : "Nicolas",
 			old : "3",
+			body:{
+				height : "50",
+				weight : "17"
+			},
 			sex : "male",
-			
+			family : {
+				parent:[
+					{
+						relationship : 'father',
+						name : 'Lancer'
+					},
+					{
+						relationship : 'mother',
+						name : 'Lara'
+					}
+				]
+			},
 			content: "Tell me something"
 		}
 		dataBinder.set(initData);
@@ -161,6 +228,16 @@
 		}
 		document.getElementById('submit').onclick = function(){
 			document.getElementById('info').innerText = JSON.stringify(dataBinder.get())
+		}
+		document.getElementById('addPerson').onclick = function(){
+			var relationship = document.getElementById('relationship').value;
+			var name = document.getElementById('personName').value;
+			dataBinder.pushArray('family.parent',{
+				relationship : relationship,
+				name : name
+			});
+			document.getElementById('relationship').value ='';
+			document.getElementById('personName').value = '';
 		}
 	</script>
 </body>
